--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Website</a>
+      <a class="navbar-brand" href="index.html">Polin's Website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -180,6 +180,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="about.html">About Me</a>
+</li>
+<li>
+  <a href="rnote.html">R Note</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
