My first website commit. The begining of greatness

--- a/rnote.html
+++ b/rnote.html
@@ -269,7 +269,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Polin's Website</a>
+      <a class="navbar-brand" href="index.html">Polin Wang</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -302,6 +302,7 @@ div.tocify {
 <hr />
 <div id="fixed-effect-clustering" class="section level2">
 <h2>Fixed Effect &amp; Clustering</h2>
+<p>Two ways of getting fixed effect estimation and clustering standard errors: <code>plm</code> and <code>felm</code>. They are consistent when one way fixed effect, and are slightly different in degree of freedom adjustment when multiple dimension fixed effect.</p>
 <pre class="r"><code># Loading the required libraries
 library(plm)
 library(lmtest)
@@ -1299,8 +1300,19 @@ Residual Std. Error
 </table>
 <hr />
 </div>
-<div id="test2" class="section level2">
-<h2>test2</h2>
+<div id="debugging" class="section level2">
+<h2>Debugging</h2>
+<ul>
+<li>Function to trace back to upper level: <code>recover()</code>.</li>
+</ul>
+<hr />
+</div>
+<div id="r-markdown-note" class="section level2">
+<h2>R Markdown Note</h2>
+<ul>
+<li>Link: <code>[link](http://xxxx.com)</code></li>
+<li>Quote: <code>&gt;abc</code></li>
+</ul>
 </div>
 
 
