--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Polin's Website</a>
+      <a class="navbar-brand" href="index.html">Polin Wang</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -201,7 +201,16 @@ $(document).ready(function () {
 </div>
 
 
-<p>Hi Zupigu!!!</p>
+<hr />
+<blockquote>
+<p>Doctoral Student</p>
+<p>Department of Insurance Legal Studies, and Real Estate</p>
+<p>288A Brooks Hall</p>
+<p>Terry College of Business</p>
+<p>University of Georgia</p>
+<p>Athens, GA, 30602</p>
+<p>Email: <a href="polinwang@uga.edu" class="uri">polinwang@uga.edu</a></p>
+</blockquote>
 
 
 
