--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Polin’s Website</title>
+<title>Polin Wang</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -196,7 +196,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Polin’s Website</h1>
+<h1 class="title toc-ignore">Polin Wang</h1>
 
 </div>
 
