My first website commit. The begining of greatness

--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ $(document).ready(function () {
 <hr />
 <blockquote>
 <p>Doctoral Student</p>
-<p>Department of Insurance Legal Studies, and Real Estate</p>
-<p>288A Brooks Hall</p>
-<p>Terry College of Business</p>
-<p>University of Georgia</p>
-<p>Athens, GA, 30602</p>
+<p>Department of Insurance Legal Studies, and Real Estate<br />
+288A Brooks Hall<br />
+Terry College of Business<br />
+University of Georgia<br />
+Athens, GA, 30602</p>
 <p>Email: <a href="polinwang@uga.edu" class="uri">polinwang@uga.edu</a></p>
 </blockquote>
 
