My first website commit. The begining of greatness

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $(document).ready(function () {
 Terry College of Business<br />
 University of Georgia<br />
 Athens, GA, 30602</p>
-<p>Email: <a href="polinwang@uga.edu" class="uri">polinwang@uga.edu</a></p>
+<p>Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></p>
 </blockquote>
 
 
