--- a/rnote.html
+++ b/rnote.html
@@ -1312,6 +1312,7 @@ Residual Std. Error
 <ul>
 <li>Link: <code>[link](http://xxxx.com)</code></li>
 <li>Quote: <code>&gt;abc</code></li>
+<li>Numbered header <code>#.</code></li>
 </ul>
 </div>
 
