--- a/rnote.html
+++ b/rnote.html
@@ -302,7 +302,7 @@ div.tocify {
 <hr />
 <div id="fixed-effect-clustering" class="section level2">
 <h2>Fixed Effect &amp; Clustering</h2>
-<p>Two ways of getting fixed effect estimation and clustering standard errors: <code>plm</code> and <code>felm</code>. They are consistent when one way fixed effect, and are slightly different in degree of freedom adjustment when multiple dimension fixed effect.</p>
+<p>Two ways of getting fixed effect estimation and clustering standard errors: <code>plm</code> and <code>felm</code>. They are consistent without fixed effect, and are slightly different in degree of freedom adjustment when running with either one or both dimensions of fixed effect.</p>
 <pre class="r"><code># Loading the required libraries
 library(plm)
 library(lmtest)
