My first website commit. The begining of greatness

--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Research</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -199,13 +199,19 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
 <hr />
-<p>I am a PhD student in the Department of Insurance, Legal Studies, and Real Estate (ILSRE) in the Terry College of Business at the University of Georgia. My research interests include martality modeling, asset liability management, insurance capital market, and market discipline.</p>
+<div id="working-paper" class="section level2">
+<h2>Working Paper</h2>
+<ul>
+<li><p>Carson, James M., David Eckles, and Polin Wang, <em>Smoke ’Em If You Got ’Em: Pricing Power in the Life Insurance Market</em></p></li>
+<li><p>McCarthy, David G. and Polin Wang, <em>Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality</em></p></li>
+</ul>
+</div>
 
 
 
