--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
+  <a href="research.html">Research</a>
+</li>
+<li>
   <a href="rnote.html">R Note</a>
 </li>
       </ul>
