--- a/rnote.html
+++ b/rnote.html
@@ -280,6 +280,9 @@ div.tocify {
   <a href="about.html">About Me</a>
 </li>
 <li>
+  <a href="research.html">Research</a>
+</li>
+<li>
   <a href="rnote.html">R Note</a>
 </li>
       </ul>
