My first website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -185,6 +185,9 @@ $(document).ready(function () {
   <a href="research.html">Research</a>
 </li>
 <li>
+  <a href="teaching.html">Teaching</a>
+</li>
+<li>
   <a href="rnote.html">R Note</a>
 </li>
       </ul>
