--- a/research.html
+++ b/research.html
@@ -185,6 +185,9 @@ $(document).ready(function () {
   <a href="research.html">Research</a>
 </li>
 <li>
+  <a href="teaching.html">Teaching</a>
+</li>
+<li>
   <a href="rnote.html">R Note</a>
 </li>
       </ul>
@@ -205,8 +208,8 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="working-paper" class="section level2">
-<h2>Working Paper</h2>
+<div id="working-paper" class="section level3">
+<h3>Working Paper</h3>
 <ul>
 <li><p>Carson, James M., David Eckles, and Polin Wang, <em>Smoke ’Em If You Got ’Em: Pricing Power in the Life Insurance Market</em></p></li>
 <li><p>McCarthy, David G. and Polin Wang, <em>Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality</em></p></li>
