--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Polin Wang</title>
+<title>Teaching</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,21 +202,21 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Polin Wang</h1>
+<h1 class="title toc-ignore">Teaching</h1>
 
 </div>
 
 
 <hr />
-<blockquote>
-<p>Doctoral Student</p>
-<p>Department of Insurance Legal Studies, and Real Estate<br />
-288A Brooks Hall<br />
-Terry College of Business<br />
-University of Georgia<br />
-Athens, GA, 30602</p>
-<p>Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></p>
-</blockquote>
+<div id="university-of-georgia" class="section level3">
+<h3>University of Georgia</h3>
+<ul>
+<li><p>Predictive Modeling BUSN 4000 Teaching Assistant</p>
+<p>(Fall 2015, Spring 2016, Fall 2016, Spring 2017)</p></li>
+<li><p>Statistical Analysis for Business MSIT 3000 Teaching Assistant</p>
+<p>(Fall 2015, Spring 2016, Fall 2016, Spring 2017)</p></li>
+</ul>
+</div>
 
 
 
