--- a/rnote.html
+++ b/rnote.html
@@ -1337,8 +1337,8 @@ Residual Std. Error
 </div>
 <div id="a-list-of-regressions" class="section level3">
 <h3>A List of Regressions</h3>
-<p>Apply the regression function on a list of data gives a flexibility and convenience to run hundreds of regression models just with 3~4 lines of code.</p>
-<p>The following performs year fixed effect regression with firm clustering on a set of varing dependent variables (2) and independent variables (11). <code>lapply</code> applies the regression funciton to each rating change, and for loop changes the dependent variable through <code>NONGRP_AVE</code> and <code>TOTAL_AVE</code>. Differences in the dependent variables are recorded in the first dimesion of the list <code>[[i]]</code> whereas the differences of independent variables are recorded in the second dimension. Results are presented by <code>stargazer</code> package.</p>
+<p>Applying the regression function on a list of data gives a flexibility and convenience to run hundreds of regression models just with 3~4 lines of code.</p>
+<p>The following performs year fixed effect regression with firm clustering on a set of varing dependent variables (2) and independent variables (11). <code>lapply</code> applies the regression funciton to each rating change, and for loop changes the dependent variable through <code>NONGRP_AVE</code> and <code>TOTAL_AVE</code>. Differences in the dependent variables are recorded in the first dimesion of the list <code>[[i]]</code> whereas the differences of independent variables are recorded in the second dimension <code>[[i]][[1:11]]</code>. Results are presented by <code>stargazer</code> package.</p>
 <pre class="r"><code>my_dep&lt;-c(&quot;NONGRP_AVE&quot;,&quot;TOTAL_AVE&quot;)
 my_lm &lt;-list(1:2)
 #--------------------------------------------------------------------------
