--- a/index.html
+++ b/index.html
@@ -217,9 +217,21 @@ University of Georgia<br />
 Athens, GA, 30602</p>
 <p>Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></p>
 </blockquote>
+<p><br />
+<br />
+</p>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
 <p>Mortality modeling, asset liability management, insurance capital market, and market discipine</p>
+</div>
+<div id="programming-languages" class="section level4">
+<h4>Programming Languages</h4>
+<ul>
+<li>VBA (professional with insurance pricing and reserving experience)</li>
+<li>Prophet (professional with insurance pricing and reserving experience)</li>
+<li>Matlab (asset liability optimization projects)</li>
+<li>R (recently developed interest in)</li>
+</ul>
 </div>
 <div id="society-of-actuary-soa-exams-completed" class="section level4">
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
