My first website commit. The begining of greatness

--- a/research.html
+++ b/research.html
@@ -213,6 +213,7 @@ $(document).ready(function () {
 <ul>
 <li><p>Carson, James M., David Eckles, and Polin Wang, <em>Smoke ’Em If You Got ’Em: Pricing Power in the Life Insurance Market</em></p></li>
 <li><p>McCarthy, David G. and Polin Wang, <em>Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality</em></p></li>
+<li><p>McCarthy, David G. and Polin Wang, <em>An investigation of period and cohort effects in adult mortality across 38 countries</em></p></li>
 </ul>
 </div>
 
