My first website

--- a/rnote.html
+++ b/rnote.html
@@ -1328,6 +1328,7 @@ Residual Std. Error
 <li>Link: <code>[link](http://xxxx.com)</code></li>
 <li>Quote: <code>&gt;abc</code></li>
 <li>Numbered header <code>#.</code></li>
+<li>Stargazer header removal: <code>header=FALSE</code></li>
 </ul>
 <hr />
 </div>
