My first website

--- a/rnote.html
+++ b/rnote.html
@@ -1329,6 +1329,16 @@ Residual Std. Error
 <li>Quote: <code>&gt;abc</code></li>
 <li>Numbered header <code>#.</code></li>
 <li>Stargazer header removal: <code>header=FALSE</code></li>
+<li>Upload website to github:
+<ol style="list-style-type: decimal">
+<li>Build Website</li>
+<li>Command in shell
+<ul>
+<li><code>git add -A</code></li>
+<li><code>git commit -m &quot;My first website&quot;</code></li>
+<li><code>git push origin master</code></li>
+</ul></li>
+</ol></li>
 </ul>
 <hr />
 </div>
