My first website

--- a/rnote.html
+++ b/rnote.html
@@ -1339,6 +1339,16 @@ Residual Std. Error
 <li><code>git push origin master</code></li>
 </ul></li>
 </ol></li>
+<li>Matrices
+<ol style="list-style-type: decimal">
+<li>Jacobian
+<ul>
+<li>Change of variable <code>x</code>, <code>y</code> <span class="math inline">\(\to\)</span> <code>u</code>, <code>v</code></li>
+<li>Determinant of <span class="math display">\[\left[\begin{array}{rr}\frac{dx}{du} &amp; \frac{dx}{dv}\\ \frac{dy}{du} &amp; \frac{dy}{dv}\end{array}\right]
+\]</span></li>
+</ul></li>
+<li>Hessian: all combinations of 2nd derivative</li>
+</ol></li>
 </ul>
 <hr />
 </div>
