My first website

--- a/index.html
+++ b/index.html
@@ -209,13 +209,15 @@ $(document).ready(function () {
 
 <hr />
 <blockquote>
-<p>Doctoral Student</p>
-<p>Department of Insurance Legal Studies, and Real Estate<br />
-B417 Amos Hall<br />
-Terry College of Business<br />
-University of Georgia<br />
-Athens, GA, 30602</p>
-<p>Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></p>
+<div style="white-space: pre-line;">PhD Candidate
+
+Department of Insurance Legal Studies, and Real Estate
+B417 Amos Hall
+Terry College of Business
+University of Georgia
+Athens, GA, 30602
+
+Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </blockquote>
 <p><br />
 <br />
@@ -223,7 +225,7 @@ Athens, GA, 30602</p>
 </p>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
-<p>Mortality modeling, asset liability management, insurance capital market, and market discipine</p>
+<p>Mortality modeling, asset liability management, generational wealth accounts, and market discipine</p>
 </div>
 <div id="programming-languages" class="section level4">
 <h4>Programming Languages</h4>
@@ -231,12 +233,14 @@ Athens, GA, 30602</p>
 <li>VBA (professional with insurance pricing and reserving experience)</li>
 <li>Prophet (professional with insurance pricing and reserving experience)</li>
 <li>Matlab (asset liability optimization projects)</li>
-<li>R (recently developed interest in)</li>
+<li>R (recently developed interests in)</li>
 </ul>
 </div>
 <div id="society-of-actuary-soa-exams-completed" class="section level4">
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
 <p>P, FM, MFE, MLC, and C</p>
+<hr />
+<p>Last updated : </p>
 </div>
 
 
