--- a/research.html
+++ b/research.html
@@ -208,12 +208,21 @@ $(document).ready(function () {
 
 
 <hr />
+<div id="presentation" class="section level3">
+<h3>Presentation</h3>
+<ul>
+<li><p>UGA/FSU Symposium, Tallahassee, FL, May 2016 “A Comparison between Lee-Carter Model and a Distribution-base Cohort Model”</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2016, Savannah, GA, Nov 2016 “Pricing Power in Life Insurance Industry”</p></li>
+<li><p>13 International Longevity Risk and Capital Markets Solutions Conference, Taipei, Taiwan, Sep 2017 “An investigation of period and cohort effects in adult mortality across 38 countries”</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2017, Nashville, TN, Nov 2017 “Smoke’Em If You Got’Em: Market Discipline in the Life Insurance Industry”</p></li>
+</ul>
+</div>
 <div id="working-paper" class="section level3">
 <h3>Working Paper</h3>
 <ul>
-<li><p>Carson, James M., David Eckles, and Polin Wang, <em>Smoke ’Em If You Got ’Em: Pricing Power in the Life Insurance Market</em></p></li>
-<li><p>McCarthy, David G. and Polin Wang, <em>Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality</em></p></li>
-<li><p>McCarthy, David G. and Polin Wang, <em>An investigation of period and cohort effects in adult mortality across 38 countries</em></p></li>
+<li><p>McCarthy, David G. and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
+<li><p>Carson, James M., David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in March 2018</em></p></li>
+<li><p>McCarthy, David G. and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>Under review at North American Actuarial Journal</em></p></li>
 </ul>
 </div>
 
