My first website

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
 <p>P, FM, MFE, MLC, and C</p>
 <hr />
-<p>Last updated : </p>
+<p>Last updated : February, 2018</p>
 </div>
 
 
