My first website

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@ $(document).ready(function () {
 <li>
   <a href="rnote.html">R Note</a>
 </li>
+<li>
+  <a href="french.html">French data test</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -240,7 +243,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
 <p>P, FM, MFE, MLC, and C</p>
 <hr />
-<p>Last updated : February, 2018</p>
+<p>Last updated : May, 2018</p>
 </div>
 
 
