--- a/rnote.html
+++ b/rnote.html
@@ -288,6 +288,9 @@ div.tocify {
 <li>
   <a href="rnote.html">R Note</a>
 </li>
+<li>
+  <a href="french.html">French data test</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
