--- a/teaching.html
+++ b/teaching.html
@@ -190,6 +190,9 @@ $(document).ready(function () {
 <li>
   <a href="rnote.html">R Note</a>
 </li>
+<li>
+  <a href="french.html">French data test</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
