My first website

--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@ $(document).ready(function () {
   <a href="rnote.html">R Note</a>
 </li>
 <li>
-  <a href="french.html">French data test</a>
+  <a href="https://polinwang.shinyapps.io/test/">French data test</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
