--- a/rnote.html
+++ b/rnote.html
@@ -289,7 +289,7 @@ div.tocify {
   <a href="rnote.html">R Note</a>
 </li>
 <li>
-  <a href="french.html">French data test</a>
+  <a href="https://polinwang.shinyapps.io/test/">French data test</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
