My first website

--- a/teaching.html
+++ b/teaching.html
@@ -218,6 +218,8 @@ $(document).ready(function () {
 <p>(Fall 2015, Spring 2016, Fall 2016, Spring 2017)</p></li>
 <li><p>Statistical Analysis for Business MSIT 3000 Teaching Assistant</p>
 <p>(Fall 2015, Spring 2016, Fall 2016, Spring 2017)</p></li>
+<li><p>Risk Management and Insurance RMIN 4000 Instructor</p>
+<p>(Spring 2019)</p></li>
 </ul>
 </div>
 
