--- a/index.html
+++ b/index.html
@@ -242,8 +242,12 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <div id="society-of-actuary-soa-exams-completed" class="section level4">
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
 <p>P, FM, MFE, MLC, and C</p>
+</div>
+<div id="award" class="section level4">
+<h4>Award</h4>
+<p>2018 Harris Schlesinger Doctoral Student Paper Award “An analysis of period and cohort mortality shocks in international data”</p>
 <hr />
-<p>Last updated : May, 2018</p>
+<p>Last updated : December, 2018</p>
 </div>
 
 
