--- a/research.html
+++ b/research.html
@@ -211,21 +211,29 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="presentation" class="section level3">
-<h3>Presentation</h3>
+<div id="presentations" class="section level3">
+<h3>Presentations</h3>
 <ul>
-<li><p>UGA/FSU Symposium, Tallahassee, FL, May 2016 “A Comparison between Lee-Carter Model and a Distribution-base Cohort Model”</p></li>
-<li><p>Southern Risk and Insurance Annual Meeting 2016, Savannah, GA, Nov 2016 “Pricing Power in Life Insurance Industry”</p></li>
-<li><p>13 International Longevity Risk and Capital Markets Solutions Conference, Taipei, Taiwan, Sep 2017 “An investigation of period and cohort effects in adult mortality across 38 countries”</p></li>
-<li><p>Southern Risk and Insurance Annual Meeting 2017, Nashville, TN, Nov 2017 “Smoke’Em If You Got’Em: Market Discipline in the Life Insurance Industry”</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2018, Chicago, IL, Nov 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2018, Chicago, IL, Nov 2018 “An analysis of period and cohort mortality shocks in international data” with David McCarthy</p></li>
+<li><p>14 International Longevity Risk and Capital Markets Solutions Conference, Amsterdam, Netherlands, Sep 2018 “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems” With David McCarthy, presented by David McCarthy</p></li>
+<li><p>14 International Longevity Risk and Capital Markets Solutions Conference, Amsterdam, Netherlands, Sep 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis, presented by David McCarthy</p></li>
+<li><p>American Risk and Insurance Annual Meeting 2018, Chicago, IL, Aug 2018 “An analysis of period and cohort mortality shocks in international data” With David McCarthy</p></li>
+<li><p>American Risk and Insurance Annual Meeting 2018, Chicago, IL, Aug 2018 “On the existence of market discipline in the face of product complexity and firm opacity” With James Carson and David Eckles</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2017, Nashville, TN, Nov 2017 “Smoke’Em If You Got’Em: Market Discipline in the Life Insurance Industry” With James Carson and David Eckles</p></li>
+<li><p>13 International Longevity Risk and Capital Markets Solutions Conference, Taipei, Taiwan, Sep 2017 “An investigation of period and cohort effects in adult mortality across 38 countries” With David McCarthy</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2016, Savannah, GA, Nov 2016 “Pricing power in life insurance industry” With James Carson and David Eckles</p></li>
+<li><p>UGA/FSU Symposium, Tallahassee, FL, May 2016 “A comparison between Lee-Carter model and a distribution-base cohort model” With David McCarthy</p></li>
 </ul>
 </div>
 <div id="working-paper" class="section level3">
 <h3>Working Paper</h3>
 <ul>
-<li><p>McCarthy, David G. and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
-<li><p>Carson, James M., David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in March 2018</em></p></li>
-<li><p>McCarthy, David G. and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>Under review at North American Actuarial Journal</em></p></li>
+<li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
+<li><p>McCarthy, David and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
+<li><p>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>Revise and resubmit at North American Actuarial Journal</em></p></li>
+<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in March 2018</em></p></li>
+<li><p>McCarthy, David and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
 </ul>
 </div>
 
