My first website

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <h4>Research Interests</h4>
 <p>Mortality modeling, asset liability management, generational wealth accounts, and market discipine</p>
 </div>
+<div id="cv" class="section level4">
+<h4>CV</h4>
+<p><a href="https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing">Download my CV</a></p>
+</div>
 <div id="programming-languages" class="section level4">
 <h4>Programming Languages</h4>
 <ul>
@@ -245,7 +249,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </div>
 <div id="award" class="section level4">
 <h4>Award</h4>
-<p>2018 Harris Schlesinger Doctoral Student Paper Award “An analysis of period and cohort mortality shocks in international data”</p>
+<p>2018 Harris Schlesinger Doctoral Student Paper Award</p>
 <hr />
 <p>Last updated : December, 2018</p>
 </div>
