--- a/research.html
+++ b/research.html
@@ -214,8 +214,8 @@ $(document).ready(function () {
 <div id="presentations" class="section level3">
 <h3>Presentations</h3>
 <ul>
-<li><p>Southern Risk and Insurance Annual Meeting 2018, Chicago, IL, Nov 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis</p></li>
-<li><p>Southern Risk and Insurance Annual Meeting 2018, Chicago, IL, Nov 2018 “An analysis of period and cohort mortality shocks in international data” with David McCarthy</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2018, Orlando, FL, Nov 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2018, Orlando, FL, Nov 2018 “An analysis of period and cohort mortality shocks in international data” with David McCarthy</p></li>
 <li><p>14 International Longevity Risk and Capital Markets Solutions Conference, Amsterdam, Netherlands, Sep 2018 “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems” With David McCarthy, presented by David McCarthy</p></li>
 <li><p>14 International Longevity Risk and Capital Markets Solutions Conference, Amsterdam, Netherlands, Sep 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis, presented by David McCarthy</p></li>
 <li><p>American Risk and Insurance Annual Meeting 2018, Chicago, IL, Aug 2018 “An analysis of period and cohort mortality shocks in international data” With David McCarthy</p></li>
