--- a/index.html
+++ b/index.html
@@ -224,15 +224,14 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </blockquote>
 <p><br />
 <br />
-<br />
 </p>
+<div id="curriculum-vitae" class="section level4">
+<h4>Curriculum vitae</h4>
+<p><a href="https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing">Download my CV</a></p>
+</div>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
 <p>Mortality modeling, asset liability management, generational wealth accounts, and market discipine</p>
-</div>
-<div id="cv" class="section level4">
-<h4>CV</h4>
-<p><a href="https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing">Download my CV</a></p>
 </div>
 <div id="programming-languages" class="section level4">
 <h4>Programming Languages</h4>
