My first website

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </p>
 <div id="curriculum-vitae" class="section level4">
 <h4>Curriculum vitae</h4>
-<p><a href="https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing">Download my CV</a></p>
+<p>Download my <a href="https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing">CV</a></p>
 </div>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
