--- a/index.html
+++ b/index.html
@@ -246,9 +246,13 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
 <p>P, FM, MFE, MLC, and C</p>
 </div>
-<div id="award" class="section level4">
-<h4>Award</h4>
-<p>2018 Harris Schlesinger Doctoral Student Paper Award</p>
+<div id="awards-and-honors" class="section level4">
+<h4>Awards and Honors</h4>
+<ul>
+<li>2018 Harris Schlesinger Doctoral Student Paper Award</li>
+<li>2018 University of Georgia RMIN Summer Research Scholarship</li>
+<li>2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)</li>
+</ul>
 <hr />
 <p>Last updated : December, 2018</p>
 </div>
