--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="rnote.html">R Note</a>
+  <a href="rnote.html">Random Note</a>
 </li>
 <li>
   <a href="https://polinwang.shinyapps.io/test/">French data test</a>
@@ -254,7 +254,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <li>2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)</li>
 </ul>
 <hr />
-<p>Last updated : December, 2018</p>
+<p>Last updated : January, 2019</p>
 </div>
 
 
