--- a/rnote.html
+++ b/rnote.html
@@ -11,7 +11,7 @@
 
 
 
-<title>R Note</title>
+<title>Random Note</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -286,7 +286,7 @@ div.tocify {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="rnote.html">R Note</a>
+  <a href="rnote.html">Random Note</a>
 </li>
 <li>
   <a href="https://polinwang.shinyapps.io/test/">French data test</a>
@@ -303,7 +303,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">R Note</h1>
+<h1 class="title toc-ignore">Random Note</h1>
 
 </div>
 
@@ -3853,6 +3853,18 @@ usa &lt;- readHMDweb(&#39;USA&#39;, &quot;mltper_1x1&quot;, user_hmd, pass_hmd)
 jpn &lt;- readHMDweb(&#39;JPN&#39;, &quot;mltper_1x1&quot;, user_hmd, pass_hmd)
 plot(usa[usa$Year==1933,]$Lx~usa[usa$Year==1933,]$Age,type=&#39;l&#39;)</code></pre>
 <p><img src="rnote_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
+<hr />
+</div>
+<div id="law-of-large-number-and-central-limit-theorem" class="section level3">
+<h3>Law of Large Number and Central Limit Theorem</h3>
+<ul>
+<li><strong>Law of Large Number</strong>: For any small <span class="math inline">\(\epsilon&gt;0\)</span>, <span class="math inline">\(Pr(|\frac{L_1+L_2+...+L_N}{N}-\mu&lt;\epsilon|)\rightarrow1\)</span> as <span class="math inline">\(N\rightarrow \infty\)</span>, where <span class="math inline">\(L_i\)</span> can be loss of person <span class="math inline">\(i\)</span> and all <span class="math inline">\(L_i\)</span> has mean <span class="math inline">\(\mu\)</span>. This means when sample size is big enough, sample mean will approach the true mean.</li>
+</ul>
+<p>LLN is useful when thinking about the more people are insured, the actual average loss is close to the true loss.</p>
+<ul>
+<li><strong>Central Limit Theorm</strong>: Regardless of how <span class="math inline">\(L_i\)</span> distributes, <span class="math inline">\(\frac{(\frac{L_1+L_2+...+L_N}{N}-\mu)}{\sigma/\sqrt{N}}\rightarrow\)</span> Normal (0,1) as <span class="math inline">\(N\rightarrow \infty\)</span>. This means the random variable, sample mean, will be very close to normal if sample size is big enough.</li>
+</ul>
+<p>CLT is useful when thinking about calculating incident (mortality) rate. e.g. The more people are observed for survival(0) or death(1) in 70 years old, (<span class="math inline">\(L_i\in\{0,1\}\)</span>), then <span class="math inline">\(\frac{L_1+L_2+...+L_N}{N}=D/N\)</span> if <span class="math inline">\(D\)</span> is the number of deaths. If <span class="math inline">\(N\)</span> is big enought, then this probability estimation will be close to normally distributed, with a mean close to the true <span class="math inline">\(p\)</span> and a standard deviation <span class="math inline">\(\sigma/\sqrt{N}\)</span>.</p>
 </div>
 
 
