--- a/teaching.html
+++ b/teaching.html
@@ -188,7 +188,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="rnote.html">R Note</a>
+  <a href="rnote.html">Random Note</a>
 </li>
 <li>
   <a href="https://polinwang.shinyapps.io/test/">French data test</a>
